# sovani-bot

./: .env.bak_2025-09-10_133456  .env.example  .gitignore  .pre-commit-config.yaml  API_DOCUMENTATION_OZON.md  API_DOCUMENTATION_WB.md  API_REAL_DATA_EXAMPLES.md  CALCULATION_FIXES.md  CHANGELOG.md  CHUNKED_API_SUMMARY.md  CRITICAL_AUDIT_REPORT.md  CRITICAL_FIXES_APPLIED.md  DATE_PICKER_README.md  EXCEL_REPORTS_README.md  EXPENSE_COMMANDS.md  FINAL_COMPREHENSIVE_REPORT.md  FINAL_SYSTEM_READINESS_REPORT.md  LARGE_PERIOD_FIX_SUMMARY.md  NEW_SYSTEM_OVERVIEW.md  PERIOD_DIAGNOSTIC_FINAL_REPORT.md  RATE_LIMITER_README.md  README.md  README_PRODUCTION.md  REVIEWS_SYSTEM_SUMMARY.md  SECURITY.md  STAGE10_SUMMARY.md  STAGE_11_REPORT.md  STAGE_12_REPORT.md  STAGE_13_IMPLEMENTATION_PLAN.md  STAGE_13_REPORT.md  STAGE_14_PARTIAL_IMPLEMENTATION.md  STAGE_14_REPORT.md  STAGE_15_REPORT.md  STAGE_16_REPORT.md  STAGE_17_COMPLETION_GUIDE.md  STAGE_17_REPORT.md  STAGE_17_SUMMARY.md  STAGE_18_REPORT.md  STAGE_19_1_ENFORCEMENT_REPORT.md  STAGE_19_2_ENFORCEMENT_REPORT.md  (+98 more)
api_clients/: __init__.py
archived_legacy_code/: emergency_data_correction.py.disabled  final_discrepancy_analysis.py  final_truth_analysis.py  hybrid_data_approach.py.disabled  real_root_cause_analysis.py
cost_data/: cost_data_20250920_010538.json  cost_data_20250920_010807.json  cost_data_20250921_003354.json
data/: expenses.json  expenses_backup.json  user_settings_123456789.json
deploy/: README.md  nginx-sovani.conf  sovani-api.service
docs/: BI_INTEGRATION.md  FULL_SYSTEM_ANALYSIS.md  OPS_KEY_ROTATION.md  (+2 more)
(+197 files in other folders)
